# HMCL-PE

./: .gitattributes  .gitignore  Fix.yml  For Android 7.0  README.md  README_cn.md  Update.yml  fixing.yml  launcher_version.json  link.bat  n2n_v1  n2n_v2  n2n_v2s  n2n_v3  settings.gradle  slog  tun2tap  uip
.GitHub/Workflow/: debug.yml
.github/ /Workflow/: Build-apk.yml
.github/ workflow/: debug.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/Workflow/: Checkout.yml  debug.yml  debug_build.yml  node js .yml  node js.yml
.github/images/: init.txt
.github/workflows/: android.yml  gradle.yml
Boat/: build.gradle
Boat/src/main/: AndroidManifest.xml
Boat/src/main/jni/: CMakeLists.txt
Boat/src/main/jni/boat/: CMakeLists.txt  boat.c  boat_clipboard.c  boat_event.c  boat_internal.h  dlopen.c
Boat/src/main/jni/loadme/: CMakeLists.txt  loadme.c
Boat/src/main/jni/security/: CMakeLists.txt  security.cpp
Boat/src/main/res/layout/: activity_boat.xml
FilePicker/: build.gradle
FilePicker/src/main/: AndroidManifest.xml
FilePicker/src/main/res/drawable/: ic_content_paste_black_24dp.xml  ic_create_new_folder_black_24dp.xml  ic_folder_open_black_24dp.xml  ic_format_line_spacing_black_24dp.xml  ic_low_priority_black_24dp.xml  ic_new_releases_black_24dp.xml  ic_storage_black_24dp.xml  nav_selector.xml
FilePicker/src/main/res/layout/: dialog_with_text.xml  file_item.xml  filebrowser_activity_main.xml  filebrowser_toolbar.xml  filter_options.xml
FilePicker/src/main/res/menu/: toolbar_default_menu.xml  toolbar_default_menu_filechooser.xml  toolbar_multiselect_menu.xml  toolbar_multiselect_menu_filechooser.xml
FilePicker/src/main/res/values/: colors.xml  strings.xml  styles.xml
FilePicker/src/main/res/values-en/: strings.xml
FilePicker/src/main/res/values-pt-rBR/: strings.xml
FilePicker/src/main/res/values-vi/: strings.xml
FilePicker/src/main/res/values-zh/: strings.xml
FilePicker/src/main/res/values-zh-rTW/: strings.xml
FilePicker/src/main/res/xml/: bottom_nav_items.xml  bottom_nav_items_folderchooser.xml  bottom_nav_items_multiselect.xml  bottom_nav_items_multiselect_filechooser.xml  path_change_menu.xml  provider_paths.xml  searchable.xml
HMCL/: App File
HMCLPE/: build.gradle
HMCLPE/release/: output-metadata.json
HMCLPE/src/main/: AndroidManifest.xml
HMCLPE/src/main/assets/: launcher_profiles.json
HMCLPE/src/main/res/drawable/: game_float_window.xml  ic_baseline_add_black.xml  ic_baseline_add_white.xml  ic_baseline_alert_black.xml  ic_baseline_arrow_drop_down_black.xml  ic_baseline_arrow_forward_black.xml  ic_baseline_cancel_black.xml  ic_baseline_clock_black.xml  ic_baseline_close_black.xml  ic_baseline_copy_black.xml  ic_baseline_create_black.xml  ic_baseline_cube_black.xml  ic_baseline_delete_black.xml  ic_baseline_delete_white.xml  ic_baseline_donate_black.xml  ic_baseline_done_black.xml  ic_baseline_done_white.xml  ic_baseline_earth_black.xml  ic_baseline_exterior_black.xml  ic_baseline_folder_black.xml  ic_baseline_game_pad_black.xml  ic_baseline_hanger_black.xml  ic_baseline_horizontal_black.xml  ic_baseline_horizontal_white.xml  ic_baseline_jump_black.xml  ic_baseline_keyboard_arrow_down_black.xml  ic_baseline_keyboard_arrow_up_black.xml  ic_baseline_keyboard_black.xml  ic_baseline_launch_black.xml  ic_baseline_local_fire_department_black.xml  ic_baseline_microsoft_black.xml  ic_baseline_mojang_black.xml  ic_baseline_more_vert_black.xml  ic_baseline_pack_black.xml  ic_baseline_person_black.xml  ic_baseline_refresh_black.xml  ic_baseline_refresh_white.xml  ic_baseline_restore_black.xml  ic_baseline_screenshot_black.xml  (+49 more)
Hin2n/: CMakeLists.txt  build.gradle
Hin2n/src/androidTest/java/wang/switchy/hin2n/: ExampleInstrumentedTest.java
Hin2n/src/main/: AndroidManifest.xml
Hin2n/src/main/cpp/: n2n_v1  n2n_v2  n2n_v2s  n2n_v3  slog  tun2tap  uip
Hin2n/src/main/cpp/edge_jni/: edge_android_v2.c  edge_jni.c  edge_jni.h  tuntap_android_v2.c
Hin2n/src/main/java/wang/switchy/hin2n/: Hin2n.java
Hin2n/src/main/java/wang/switchy/hin2n/entity/: SettingItemEntity.java
Hin2n/src/main/java/wang/switchy/hin2n/event/: ConnectingEvent.java  LogChangeEvent.java  SupernodeDisconnectEvent.java
Hin2n/src/main/java/wang/switchy/hin2n/model/: EdgeCmd.java  EdgeStatus.java  N2NSettingInfo.java
Hin2n/src/main/java/wang/switchy/hin2n/service/: N2NService.java
Hin2n/src/main/java/wang/switchy/hin2n/storage/db/base/: DaoMaster.java  DaoSession.java  N2NSettingModelDao.java
Hin2n/src/main/java/wang/switchy/hin2n/storage/db/base/model/: N2NSettingModel.java
Hin2n/src/main/java/wang/switchy/hin2n/tool/: IOUtils.java  LogFileObserver.java  N2nTools.java  ThreadUtils.java
Hin2n/src/main/jniLibs/arm64-v8a/include/openssl/: opensslconf.h
Hin2n/src/main/jniLibs/armeabi-v7a/include/openssl/: opensslconf.h
Hin2n/src/main/jniLibs/x86/include/openssl/: opensslconf.h
Hin2n/src/main/jniLibs/x86_64/include/openssl/: opensslconf.h
Hin2n/src/main/res/values/: strings.xml
Hin2n/src/test/java/wang/switchy/hin2n/: ExampleUnitTest.java
PojavLauncher/: build.gradle
PojavLauncher/src/main/: AndroidManifest.xml
PojavLauncher/src/main/jni/: awt_bridge.c  stdio_is.c
ZipTools/: build.gradle
ZipTools/src/main/: AndroidManifest.xml
bundles/n2n_meyerd/n2n_v1/: edge.c  n2n.c  n2n.h  version.c
bundles/n2n_meyerd/n2n_v1/android/: tuntap_android.c
bundles/n2n_meyerd/n2n_v1/win32/: n2n_win32.h  wintap.c  wintap.h
bundles/n2n_meyerd/n2n_v2/: edge.c  n2n.c  n2n.h  transform_tf.c  version.c
bundles/n2n_meyerd/n2n_v2/android/: tuntap_android.c
bundles/n2n_meyerd/n2n_v2/win32/: n2n_win32.h  wintap.c  wintap.h
bundles/n2n_ntop_v2/win32/: getopt.c  n2n_win32.h  wintap.c  wintap.h
bundles/n2n_ntop_v2/win32/DotNet/: n2n.vcproj
bundles/n2n_ntop_v3/include/: sn_selection.h
bundles/n2n_ntop_v3/win32/: wintap.c  wintap.h
bundles/n2n_ntop_v3/win32/DotNet/: n2n.sln  supernode.vcproj
bundles/slog/: slog.c  slog.h
gradle/wrapper/: gradle-wrapper.properties
(+722 files in other folders)
